<package>
  <name>gflags_vendor</name>
  <version>2.2.1</version>
  <description>gflags_vendor</description>
  <maintainer email="slynen@ethz.ch">Simon Lynen</maintainer>

  <license>See package</license>

  <buildtool_depend>ament</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
